--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <p>Week 14</p>
     </nav>
     <h3 >IT BANKOKDYNAMO</h3>
+    <h3> Welcome to BANKOKDYNAMO best bank for you</h3>
     Enter Number:<input type="number" id="myinput" value="0">
     <button onclick="add()">+1</button>
     <script src="script.js"></script>
