--- a/index.html
+++ b/index.html
@@ -12,10 +12,25 @@
         <h2>ITFHub Website</h2>
         <p>Week 14</p>
     </nav>
-    <h3 >IT BANKOKDYNAMO</h3>
-    <h3> Welcome to BANKOKDYNAMO best bank for you</h3>
-    Enter Number:<input type="number" id="myinput" value="0">
-    <button onclick="add()">+1</button>
-    <script src="script.js"></script>
+    <div class="heading">
+        <h3><marquee direction="left">IT BANKOKDYNAMO</marquee></h3>
+        <h3> Welcome to BANKOKDYNAMO best bank for you</h3>
+    </div>
+            Enter Number:<input type="number" id="myinput" value="0">
+        <button onclick="add()">+1</button>
+        <h3>Account Overview</h3>
+            <h4>
+                <img src="2596477.png" class="icon">
+                <p>Account Information</p>
+                <p>Name : Thanawit Wanthong</p>
+                <p>Type : Saving Account</p>
+            </h4>
+            <h4>
+                <img src="2596477.png" class="icon">
+                <p>Balance Information</p>
+                <p>Current Account Balance:</p>
+                <p>Current Cash Balance:</p>
+            </h4>
+    <script src="script.js"></script>   
 </body>
 </html>
